[package]
name = "pico-sdvx-ac"
version = "1.0.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0" # The "rp-pico" is a BSP crate for the "rp2040-hal" crate.
usb-device = "0.3.2"
usbd-hid = "0.8.2"


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
